--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -44,9 +44,23 @@ html body {
   }
 }
 
+/*单页新增*/
+.single-wrapper {
+  padding: 24px;
+  .ant-card + .ant-card {
+    margin-top: 24px;
+  }
+}
+
 .generic-align-end {
   display: flex;
   justify-content: end;
+}
+
+.generic-align-center {
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .generic-margin-bottom {
